# audioviz

./: .clang-format  .gitignore  CMakeLists.txt  README.md  audio_manager.cpp  audio_manager.h  audio_playback.cpp  audio_playback.h  audio_player.cpp  audio_player.h  audio_source.cpp  audio_source.h  framebuffer.cpp  framebuffer.h  interpolant.cpp  interpolant.h  load_audio.c  load_audio.h  main.cpp  opengl.cpp  opengl.h  shader_program.cpp  shader_program.h  shaders.cpp  shaders.h  stft.cpp  stft.h  window.cpp  window.h
shaders/: blurh_frag.glsl  blurh_frag_noMSAA.glsl  blurv_frag.glsl  blurv_frag_MSAA.glsl  blurv_frag_noMSAA.glsl  copy_frag.glsl  copy_frag_noMSAA.glsl  copy_vert.glsl  frag_plain.glsl  frag_tex.glsl  render_frag.glsl  render_vert.glsl  vert_direct.glsl  vert_direct_freq.glsl  vert_tex.glsl
src/: CMakeLists.txt  main.cpp
src/algorithm/: interpolant.cpp  interpolant.h  interpolator.cpp  interpolator.h  resampler.cpp  resampler.h  stft.cpp  stft.h
src/audio/: file_source.cpp  file_source.h  i_source.h  player.cpp  player.h  source.cpp
src/vfx/eclipse/: effect.cpp  effect.h  fragment.glsl  vertex.glsl
src/vfx/liquid/: effect.cpp  effect.h  fragment.glsl  vertex.glsl
src/video/: framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
src/video/shaders/: blurh_frag_MSAA.glsl  blurh_frag_noMSAA.glsl  blurv_frag_noMSAA.glsl  copy_frag_MSAA.glsl  copy_frag_noMSAA.glsl
src/visuals/: i_visual.h
src/visuals/eclipse/: eclipse.cpp  eclipse.h
src/visuals/liquid/: liquid.cpp  liquid.h
vfx/liquid/: effect.cpp  effect.h  fragment.glsl
