cmake_minimum_required (VERSION 2.6)
project (audioviz)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
include_directories("${PROJECT_BINARY_DIR}")

# Find FFTW
find_path(FFTW_INCLUDE_DIR fftw3.h)
find_library(FFTW_LIBS REQUIRED NAMES fftw3)
find_library(FFTWF_LIBS REQUIRED NAMES fftw3f)
include_directories(${FFTW_INCLUDE_DIR})
message(STATUS "FFTW include directory: ${FFTW_INCLUDE_DIR}")
message(STATUS "FFTW float library: ${FFTWF_LIBS}")
message(STATUS "FFTW double library: ${FFTW_LIBS}")

find_path(SPECTROGRAM_INCLUDE_DIR spectrogram.h PATH_SUFFIXES include)
find_library(SPECTROGRAM_LIB NAMES spectrogram PATH_SUFFIXES build/src)
include_directories(${SPECTROGRAM_INCLUDE_DIR})

add_executable(audioviz main.cpp audio_manager.cpp framebuffer.cpp shader_program.cpp stft.cpp window.cpp)
target_link_libraries(audioviz GLESv2 SDL2 SDL2_image)
target_link_libraries(audioviz avcodec avformat avutil avdevice bz2 swresample)
target_link_libraries(audioviz ${FFTW_LIBS} ${FFTWF_LIBS} ${SPECTROGRAM_LIB} )
